welcome-app-with-gitops-promoter/welcome-app/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: welcome-app-deployment
  labels:
    app: welcome-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: welcome-app
  template:
    metadata:
      labels:
        app: welcome-app
    spec:
      containers:
        - name: welcome-app
          image: bonyscott/welcome-app:working
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
