welcome-app-with-gitops-promoter/welcome-app/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: welcome-app-service
spec:
  selector:
    app: welcome-app
  ports:
    - port: 8080
      targetPort: 8080
