welcome-app-with-gitops-promoter/welcome-app/base/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: welcome-app
spec:
  hosts:
    - welcome.local.io
  gateways:
    - argo-cd/welcome-gateway
  http:
    - route:
        - destination:
            host: welcome-app-service
            port:
              number: 8080
